--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Visualize Data with a Scatterplot Graph</title>
     <link rel="stylesheet" href="style.css">
+	<script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
     <div id="main">
@@ -16,7 +17,7 @@
 
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
     <script type="module">GetChart()</script>
 </body>
 </html>
