--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div id="main">
         <div id="container">
             <div id="title">
-                <h1 class="txt">Doping in Professional Bicycle Racing</h1>
-                <h3 class="txt">35 Fastest times up Alpe d'Huez</h3>
+                <h1 class="txt">Doping nel Ciclismo Professionistico</h1>
+                <h3 class="txt">35 tempi più veloci su Alpe d'Huez</h3>
             </div>
             <div id="chartHolder"></div>
 
         </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
     <script type="module">GetChart()</script>
 </body>
 </html>
